--- a/.github/workflows/powerfork.yml
+++ b/.github/workflows/powerfork.yml
@@ -1,8 +1,13 @@
 name: Sync PowerFork branch daily
 
 on:
-  schedule:
-    - cron: '0 16 * * *'
+  workflow_call:
+    inputs:
+      from_ci:
+        type: boolean
+        required: false
+        default: true
+
   workflow_dispatch:
 
 jobs:
