--- a/.github/workflows/powerfork.yml
+++ b/.github/workflows/powerfork.yml
@@ -36,7 +36,7 @@ jobs:
           new_commit=$(git rev-parse upstream/susfs)
           echo "Latest upstream commit: $new_commit"
 
-          # PowerFork Branch: Upstream ile senkronize et (tüm commitler burada)
+          # PowerFork Branch: Upstream ile senkronize et
           if git rev-parse --verify powerfork >/dev/null 2>&1; then
               git checkout powerfork
               current_powerfork_commit=$(git rev-parse HEAD)
@@ -48,39 +48,30 @@ jobs:
           if [ "$current_powerfork_commit" != "$new_commit" ]; then
               echo "Updating powerfork branch..."
               git reset --hard upstream/susfs
-              # Workflow dosyalarını commit dışı bırak
               git rm --cached .github/workflows/*.yml 2>/dev/null || true
               git add -A
               git commit -m "Sync powerfork with upstream" || echo "No changes"
               git push origin powerfork --force
-          else
-              echo "PowerFork branch zaten güncel."
           fi
 
-          # Update Branch: Sadece update-powerfork.md'yi tut
+          # Update Branch: SADECE update-*.md dosyaları
           if git rev-parse --verify update >/dev/null 2>&1; then
               git checkout update
+              # Mevcut dosyaları temizle (update-*.md hariç)
+              git ls-files | grep -v 'update-.*\.md' | xargs git rm -rfq 2>/dev/null || true
           else
-              git checkout -b update upstream/susfs
+              git checkout --orphan update
+              git rm -rf .  # Orphan branch'deki tüm dosyaları sil
           fi
 
-          if [ -f update-powerfork.md ]; then
-              recorded_commit=$(grep -m1 "^Commit:" update-powerfork.md | awk '{print $2}')
-          else
-              recorded_commit=""
-          fi
-
-          if [ "$recorded_commit" != "$new_commit" ]; then
-              echo "Update branch'e yeni log ekleniyor..."
-              current_time=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
-              echo "Commit: $new_commit" > update-powerfork.md
-              echo "Checked at: $current_time" >> update-powerfork.md
-              git add update-powerfork.md
-              git commit -m "Update log: $new_commit"
-              git push origin update --force
-          else
-              echo "Update branch zaten güncel."
-          fi
+          # Yeni update-powerfork.md oluştur/güncelle
+          current_time=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
+          echo "Commit: $new_commit" > update-powerfork.md
+          echo "Checked at: $current_time" >> update-powerfork.md
+          
+          git add update-powerfork.md
+          git commit -m "Update log: $new_commit"
+          git push origin update --force
 
       - name: Clear older runs
         env:
