--- a/.github/workflows/astera.yml
+++ b/.github/workflows/astera.yml
@@ -7,7 +7,6 @@ on:
         type: boolean
         required: false
         default: true
-
   workflow_dispatch:
 
 jobs:
@@ -30,13 +29,12 @@ jobs:
           git remote add upstream https://github.com/xiaomi-begonia-dev/android_kernel_xiaomi_mt6785.git || true
           git fetch upstream fifteen
 
-      - name: Sync Astera and Update branches
+      - name: Sync Astera branch
         run: |
           set -e
           new_commit=$(git rev-parse upstream/fifteen)
           echo "Latest upstream commit: $new_commit"
 
-          # Astera Branch: Upstream ile senkronize et
           if git rev-parse --verify astera >/dev/null 2>&1; then
               git checkout astera
               current_astera_commit=$(git rev-parse HEAD)
@@ -52,26 +50,9 @@ jobs:
               git add -A
               git commit -m "Sync astera with upstream" || echo "No changes"
               git push origin astera --force
-          fi
-
-          # Update Branch: SADECE update-astera.md
-          if git rev-parse --verify update >/dev/null 2>&1; then
-              git checkout update
-              # Tüm dosyaları sil (update-astera.md hariç)
-              git ls-files | grep -v 'update-astera.md' | xargs git rm -rfq 2>/dev/null || true
           else
-              git checkout --orphan update
-              git rm -rf .  # Orphan branch'deki tüm dosyaları sil
+              echo "Astera branch zaten güncel."
           fi
-
-          # Yeni update-astera.md oluştur/güncelle
-          current_time=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
-          echo "Commit: $new_commit" > update-astera.md
-          echo "Checked at: $current_time" >> update-astera.md
-          
-          git add update-astera.md
-          git commit -m "Update log: $new_commit"
-          git push origin update --force
 
       - name: Clear older runs
         env:
