--- a/.github/workflows/nova.yml
+++ b/.github/workflows/nova.yml
@@ -7,7 +7,6 @@ on:
         type: boolean
         required: false
         default: true
-
   workflow_dispatch:
 
 jobs:
@@ -30,13 +29,12 @@ jobs:
           git remote add upstream https://github.com/Nova-Kernels/kernel_xiaomi_mt6785.git || true
           git fetch upstream fifteen
 
-      - name: Sync Nova and Update branches
+      - name: Sync Nova branch
         run: |
           set -e
           new_commit=$(git rev-parse upstream/fifteen)
           echo "Latest upstream commit: $new_commit"
 
-          # Nova Branch: Upstream ile senkronize et
           if git rev-parse --verify nova >/dev/null 2>&1; then
               git checkout nova
               current_nova_commit=$(git rev-parse HEAD)
@@ -52,26 +50,9 @@ jobs:
               git add -A
               git commit -m "Sync nova with upstream" || echo "No changes"
               git push origin nova --force
-          fi
-
-          # Update Branch: SADECE update-nova.md
-          if git rev-parse --verify update >/dev/null 2>&1; then
-              git checkout update
-              # Tüm dosyaları sil (update-nova.md hariç)
-              git ls-files | grep -v 'update-nova.md' | xargs git rm -rfq 2>/dev/null || true
           else
-              git checkout --orphan update
-              git rm -rf .  # Orphan branch'deki tüm dosyaları sil
+              echo "Nova branch zaten güncel."
           fi
-
-          # Yeni update-nova.md oluştur/güncelle
-          current_time=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
-          echo "Commit: $new_commit" > update-nova.md
-          echo "Checked at: $current_time" >> update-nova.md
-          
-          git add update-nova.md
-          git commit -m "Update log: $new_commit"
-          git push origin update --force
 
       - name: Clear older runs
         env:
