--- a/.github/workflows/power.yml
+++ b/.github/workflows/power.yml
@@ -7,7 +7,6 @@ on:
         type: boolean
         required: false
         default: true
-
   workflow_dispatch:
 
 jobs:
@@ -30,13 +29,12 @@ jobs:
           git remote add upstream https://github.com/Saikrishna1504/kernel_xiaomi_mt6785.git || true
           git fetch upstream vic
 
-      - name: Sync Power and Update branches
+      - name: Sync Power branch
         run: |
           set -e
           new_commit=$(git rev-parse upstream/vic)
           echo "Latest upstream commit: $new_commit"
 
-          # Power Branch: Upstream ile senkronize et
           if git rev-parse --verify power >/dev/null 2>&1; then
               git checkout power
               current_power_commit=$(git rev-parse HEAD)
@@ -52,26 +50,9 @@ jobs:
               git add -A
               git commit -m "Sync power with upstream" || echo "No changes"
               git push origin power --force
-          fi
-
-          # Update Branch: SADECE update-power.md
-          if git rev-parse --verify update >/dev/null 2>&1; then
-              git checkout update
-              # Mevcut dosyaları temizle (update-power.md hariç)
-              git ls-files | grep -v 'update-power.md' | xargs git rm -rfq 2>/dev/null || true
           else
-              git checkout --orphan update
-              git rm -rf .  # Orphan branch'deki tüm dosyaları sil
+              echo "Power branch zaten güncel."
           fi
-
-          # Yeni update-power.md oluştur/güncelle
-          current_time=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
-          echo "Commit: $new_commit" > update-power.md
-          echo "Checked at: $current_time" >> update-power.md
-          
-          git add update-power.md
-          git commit -m "Update log: $new_commit"
-          git push origin update --force
 
       - name: Clear older runs
         env:
