--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,9 @@ all.config
 
 # fetched Android config fragments
 kernel/configs/android-*.cfg
+
+# Kernel build output
+Anykernel/
+toolchain/
+out/
+*.zip
