readme: cl: Update some codes

--- a/.github/workflows/nova.yml
+++ b/.github/workflows/nova.yml
@@ -24,28 +24,28 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
-      - name: Add GitLab remote and fetch fifteen branch
+      - name: Add GitLab remote and fetch fifteen-fixed branch
         run: |
           git remote add upstream https://github.com/Nova-Kernels/kernel_xiaomi_mt6785.git || true
-          git fetch upstream fifteen
+          git fetch upstream fifteen-fixed
 
       - name: Sync Nova branch
         run: |
           set -e
-          new_commit=$(git rev-parse upstream/fifteen)
+          new_commit=$(git rev-parse upstream/fifteen-fixed)
           echo "Latest upstream commit: $new_commit"
 
           if git rev-parse --verify nova >/dev/null 2>&1; then
               git checkout nova
               current_nova_commit=$(git rev-parse HEAD)
           else
-              git checkout -b nova upstream/fifteen
+              git checkout -b nova upstream/fifteen-fixed
               current_nova_commit=""
           fi
 
           if [ "$current_nova_commit" != "$new_commit" ]; then
               echo "Updating nova branch..."
-              git reset --hard upstream/fifteen
+              git reset --hard upstream/fifteen-fixed
               git rm --cached .github/workflows/*.yml 2>/dev/null || true
               git add -A
               git commit -m "Sync nova with upstream" || echo "No changes"
